Fixed mobile horizontal shifting.

--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,7 @@
 html, body{
   height: 100% !important;
+  width: auto!important; 
+  overflow-x: hidden!important
 }
 
 body {
